@@ -3,6 +3,8 @@
 - Fix content groups payload when content groups is None.
 - Use Python version as user-agent string.
 - Rebuild hit payload to remove items with None values.
+- Improve compatibility with Python 3.
+- Use logger instead of print() for logging messages.
 
 1.0a1:
 - Unit tests for creating a tracker and updating its custom dimensions, custom metrics or user ID.
